[project]
name = "estimador-cag"
version = "0.1.0"
description = "FastAPI CAG estimator using OpenAI and doctora.json context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.40.0",
]

[tool.uv]
package = false
